# lexiterm

./: .cargo-deny.toml  Cargo.toml  LICENSE  README.md  char_scores.txt  cliff.toml
.github/workflows/: audit.yml  build_and_release.yml  general.yml  tests.yml
lexicon/: Cargo.toml
lexicon/src/word_trie/: node.rs  path.rs
lexiterm/: Cargo.toml
lexiterm/src/: app_manager.rs  input_processing.rs  main.rs  search_worker.rs  tui_renderer.rs
tui/: Cargo.toml
tui/src/: input.rs  input_processing.rs  main.rs  search_worker.rs  tui.rs
tui/src/app_manager/: panel_manager.rs
tui/src/input/: panel_manager.rs
tui/src/tui_renderer/: panels.rs
word_trie/: Cargo.toml
word_trie/src/: file_reader.rs  lib.rs  scored_word_trie.rs  word_trie.rs  words.rs
