[package]
name = "lexiterm"
version = "0.1.0"
edition = "2021"
description = "A scrabble solver app that runs on the terminal with a TUI."

[dependencies]
anyhow = "1.0.97"
crossbeam = "0.8.4"
crossterm = "0.28.1"
ratatui = "0.29.0"
regex = "1.11.1"
lexicon = { "path" = "../lexicon" }

[dev-dependencies]
pretty_assertions = "1.4.1"
